[project]
name = "mcp-server-nexus"
version = "0.1.0"
description = "NEXUS - The Agent Orchestration Layer for the Xyber Ecosystem"
authors = [
    { name = "NEXUS Team" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.8.0,<2.0.0",
    "pydantic-settings>=2.0",
    "uvicorn[standard]",
    "fastmcp>=2.3.4",
    "fastapi>=0.115.12",
    "tenacity>=8.2.3",
    "httpx>=0.25.0",
    "pyyaml",
    "x402[evm,svm]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.2",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_nexus"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "-v"]
